--- a/hospital/templates/hospital/navbar.html
+++ b/hospital/templates/hospital/navbar.html
@@ -39,7 +39,7 @@
 			  </li>
 			{% endif %}
 		</ul>
-	  <form class="form-inline my-2 my-lg-0 action="{% url 'search_results' %}" method="get"">
+	  <form class="form-inline my-2 my-lg-0 action="{% url 'search_results' %}" method="get">
 		<input class="form-control mr-sm-2 " type="search" placeholder="Search for" aria-label="Search" name="q">
 	  </form>
 	</div>
