--- a/hospital/templates/hospital/search_results.html
+++ b/hospital/templates/hospital/search_results.html
@@ -2,6 +2,7 @@
 {% load static %}
 <br><br><br>
 {% block content %}
+<h1>Search Results</h1>
 {% for item in object_list %}
 {{item.service_name}}
 {{item.description}}
