--- a/hospital/templates/hospital/navbar.html
+++ b/hospital/templates/hospital/navbar.html
@@ -44,7 +44,7 @@
 	  </form>-->
 	  <form class="form-inline" action="{% url 'search_results' %}" method="get">
 		<div class="md-form my-0">
-		  <input name="q" class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+		  <input name="q" class="form-control mr-sm-2" type="text" placeholder="Search for medicine" aria-label="Search">
 		</div>
 	  </form>
 	</div>
