--- a/hospital/templates/hospital/search_results.html
+++ b/hospital/templates/hospital/search_results.html
@@ -3,12 +3,21 @@
 
 {% block content %}
 <br><br><br>
-<h1>Search Results</h1>
+<h1></h1>
 {% for item in object_list %}
-{{item.service_name}}
-{{item.description}}
-{{item.treatment}}
-{{item.drugs}}
-<br><br><br>
-{% endfor %}
+
+<div id="content">
+    <h1>Search Results</h1>
+    <h2>{{item.service_name}}</h2>
+    <p>{{item.description}}</p>
+    <h2>{{item.drugs}}</h2>
+    <p>{{item.treatment}}</p>
+  </div>
+  <div id="footer">
+    <p>Site Design by <a href="http://willpeavy.net" >Will Peavy</a> / Valid <a target="_blank" href="http://validator.w3.org/">XHTML</a> and <a target="_blank" href="http://jigsaw.w3.org/css-validator/">CSS</a> / Contents by <em>Your Name</em>, Copyright 2007</p>
+  </div>
+  <div id="cover"></div>
+
+  <br><br><br>
+  {% endfor %}
 {%endblock %}
