--- a/hospital/templates/hospital/search_results.html
+++ b/hospital/templates/hospital/search_results.html
@@ -13,11 +13,8 @@
     <p>{{item.treatment}}</p>
     <h2>{{item.service_name}}</h2>
     <p>{{item.description}}</p>
+    <cite><i>Written By</i>Aga-Khan</cite>
   </div>
-  <div id="footer">
-    <p>Site Design by <a href="http://willpeavy.net" >Will Peavy</a> / Valid <a target="_blank" href="http://validator.w3.org/">XHTML</a> and <a target="_blank" href="http://jigsaw.w3.org/css-validator/">CSS</a> / Contents by <em>Your Name</em>, Copyright 2007</p>
-  </div>
-  <div id="cover"></div>
 </div>
   {% endfor %}
   <br><br><br>
