--- a/hospital/templates/hospital/footer.html
+++ b/hospital/templates/hospital/footer.html
@@ -19,7 +19,7 @@
 		<div class="col-md-2 mx-auto">
 
 		  <!-- Links -->
-		  <h5 class="font-weight-bold text-uppercase mt-3 mb-4">About us:</h5>
+		  <h5 class="font-weight-bold text-white mt-3 mb-4">About us:</h5>
 
 		  <ul class="list-unstyled">
 			<li>
@@ -46,7 +46,7 @@
 		<div class="col-md-2 mx-auto">
 
 		  <!-- Links -->
-		  <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Location:</h5>
+		  <h5 class="font-weight-bold text-white mt-3 mb-4">Location:</h5>
 
 		  <ul class="list-unstyled">
 			<li>
@@ -72,7 +72,7 @@
 		<div class="col-md-2 mx-auto">
 
 		  <!-- Links -->
-		  <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Contact us:</h5>
+		  <h5 class="font-weight-bold text-white mt-3 mb-4">Contact us:</h5>
 
 		  <ul class="list-unstyled">
 			<li>
