--- a/hospital/templates/hospital/search_results.html
+++ b/hospital/templates/hospital/search_results.html
@@ -13,7 +13,7 @@
     <p>{{item.treatment}}</p>
     <h2>{{item.service_name}}</h2>
     <p>{{item.description}}</p>
-    <cite><i>Written By</i>{{item.Doctor}}Aga-Khan</cite>
+    <cite style="color: cyan;"><i>By Dr.</i>{{item.Doctor}}, Aga-Khan</cite>
   </div>
 </div>
 <br><br><br>
