--- a/hospital/templates/hospital/footer.html
+++ b/hospital/templates/hospital/footer.html
@@ -79,13 +79,13 @@
 			+25422222777/33888778
 			</li>
 			<li>
-			email:agakahosp.com
+			Email:agakahosp.com
 			</li>
 			<li>
-			twitter:@agakan.com
+			Twitter:@agakan.com
 			</li>
 			<li>
-			  insta:@agakhan.com
+			Instagram:@agakhan.com
 			</li>
 			</li>
 		  </ul>
@@ -139,7 +139,7 @@
 
 	<!-- Copyright -->
 	<div class="footer-copyright text-center py-3">© 2020 Copyright:
-	  <a href="https://mdbootstrap.com/">Agakhanhospital.com</a>
+	  <a href="https://mdbootstrap.com/">aga-khan.herokuapp.com</a>
 	</div>
 	<!-- Copyright -->
 
