--- a/hospital/templates/hospital/search_results.html
+++ b/hospital/templates/hospital/search_results.html
@@ -18,6 +18,9 @@
 </div>
 <br><br><br>
   {% endfor %}
+  {% else %}
+  <p>No such medicine at the moment</p>
+  <p>Thanks for your trust in our services</p>
   {% endif %}
 
 {%endblock %}
