--- a/hospital/templates/hospital/footer.html
+++ b/hospital/templates/hospital/footer.html
@@ -138,7 +138,7 @@
 	<!-- Social buttons -->
 
 	<!-- Copyright -->
-	<div class="footer-copyright text-center py-3">© 2020 Copyright:
+	<div class="footer-copyright text-center text-white py-3">© 2020 Copyright:
 	  <a href="https://mdbootstrap.com/">aga-khan.herokuapp.com</a>
 	</div>
 	<!-- Copyright -->
